service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  clusterIP: 10.96.0.12
  externalIPs:
  - 192.168.122.137
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      nodePort: 31443
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      nodePort: 31321
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer

---
